A classe "PingAnyIp" foi modificada