@@ -6,7 +6,7 @@ import java.io.IOException;
 
 public class PingAnyIp {
     public void ping(String ipAdrress, String strParameters) throws IOException {
-        String strCommand = strParameters + ipAdrress;
+        String pingCommand = strParameters + ipAdrress;
         String env_temp = System.getenv("TEMP");
         FileWriter bat = new FileWriter(env_temp + "/ivping/ping_any_ip.bat");
         try (BufferedWriter bf = new BufferedWriter(bat)) {
@@ -14,11 +14,13 @@ public class PingAnyIp {
             bf.newLine();
             bf.write("@cls");
             bf.newLine();
-            bf.write(strCommand);
+            bf.write(pingCommand);
             bf.newLine();
             bf.write("@pause");
         }
-        String strCommand2 = env_temp + "/ivping/ping_any_ip.bat";
-        Runtime.getRuntime().exec("rundll32 SHELL32.DLL,ShellExec_RunDLL " + strCommand2);
+
+        String command = env_temp + "/ivping/ping_any_ip.bat";
+        ProcessBuilder processBuilder = new ProcessBuilder("rundll32", "SHELL32.DLL,ShellExec_RunDLL", command);
+        processBuilder.start();
     }
 }
